[gd_scene load_steps=3 format=3 uid="uid://0qxkysj46cne"]

[ext_resource type="Script" path="res://Scripts/debuggable_area.gd" id="1_tcxsx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sftp4"]

[node name="DebuggableArea" type="Area2D"]
collision_layer = 4
script = ExtResource("1_tcxsx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sftp4")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
